# compiler

./: .gitignore  Taskfile.yml  ast.ungram  build.zig  build.zig.zon  syntax.ungram
cmd/ast/: ast.zig
cmd/lsp/: main.zig
cmd/ungrammar2json/: ungrammar2json.zig
codegen/: Cargo.toml
codegen/src/: main.rs
crates/codegen/: Cargo.toml
crates/codegen/src/: main.rs
crates/hir/: Cargo.toml
crates/hir/src/: infer.rs  lib.rs  lower.rs  pretty.rs
crates/lexer/: Cargo.toml
crates/lexer/src/: lib.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: main.rs
crates/mir/: Cargo.toml
crates/mir/src/: lib.rs
crates/syntax/: Cargo.toml
crates/syntax/src/: ast.rs  ast.ungram  builder.rs  codegen.rs  cursor.rs  grammar.rs  lexer.rs  lib.rs  parser.rs  root.rs
lib/: parse.zig  sema.zig  syntax.zig
lib/parse/: Parser.zig  grammar.zig  lex.zig
lib/sema/: Context.zig  LineIndex.zig  Sema.zig  ir.zig
lib/syntax/: ast.zig  pure.zig
lib/syntax/pure/: Builder.zig
lib/ungrammar/: lexer.zig  parser.zig  ungrammar.zig
src/: Context.zig  LineIndex.zig  ast.zig  db.zig  ir.zig  lex.zig  main.zig  parse.zig  syntax.zig  tests.zig
src/parse/: Parser.zig  grammar.zig  lex.zig
src/syntax/: Builder.zig  ast.zig  pure.zig  tags.zig
src/syntax/pure/: Builder.zig
vscode/: compiler.tmLanguage.json  extension.js  jsconfig.json  package-lock.json  package.json
