[package]
name = "codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cranelift-codegen = { version = "0.106.1", features = ["x86"] }
cranelift-frontend = "0.106.1"
cranelift-module = "0.106.1"
cranelift-object = "0.106.1"
hir = { version = "0.0.0", path = "../hir" }
mir = { version = "0.0.0", path = "../mir" }
syntax = { version = "0.0.0", path = "../syntax" }
