[package]
name = "syntax"
version = "0.0.0"
edition = "2021"

[dependencies]
rowan = "0.15.11"
unicode-ident = "1.0.11"

[dev-dependencies]
expect-test = "1.4.1"
prettyplease = "0.2.12"
proc-macro2 = { version = "1.0.66", default-features = false }
quote = { version = "1.0.32", default-features = false }
syn = { version = "2.0.28", default-features = false, features = ["parsing"] }
ungrammar = "1.16.1"
